server and client works

--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -9,16 +9,9 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-<!--  <groupId>pro.filaretov.spring.config</groupId>-->
   <artifactId>config-server</artifactId>
-<!--  <version>0.0.1-SNAPSHOT</version>-->
   <name>config-server</name>
   <description>config server</description>
-
-<!--  <properties>-->
-<!--    <java.version>11</java.version>-->
-<!--    <spring-cloud.version>2020.0.3</spring-cloud.version>-->
-<!--  </properties>-->
 
   <dependencies>
     <dependency>
@@ -34,6 +27,7 @@
       <artifactId>spring-cloud-config-server</artifactId>
     </dependency>
 
+    <!-- Test -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -45,25 +39,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-<!--  <dependencyManagement>-->
-<!--    <dependencies>-->
-<!--      <dependency>-->
-<!--        <groupId>org.springframework.cloud</groupId>-->
-<!--        <artifactId>spring-cloud-dependencies</artifactId>-->
-<!--        <version>${spring-cloud.version}</version>-->
-<!--        <type>pom</type>-->
-<!--        <scope>import</scope>-->
-<!--      </dependency>-->
-<!--    </dependencies>-->
-<!--  </dependencyManagement>-->
-
-<!--  <build>-->
-<!--    <plugins>-->
-<!--      <plugin>-->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
-<!--  </build>-->
 
 </project>
