--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8888
+# triple slash is for Windows, use double slash for Linux
+spring.cloud.config.server.git.uri=file:///${user.home}/spring-cloud-config-repo
+spring.cloud.config.server.git.clone-on-start=true
+spring.security.user.name=user
+spring.security.user.password=Passw0rd
