attach AWS Parameter Store as a property source in addition to Config Server - both are used now

--- a/client-app/src/main/resources/application.properties
+++ b/client-app/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# When the application is not running on an EC2,
+# we need to configure the correct region and disable auto stack name detection
+cloud.aws.stack.auto=false
+cloud.aws.region.static=us-east-1
+# this is to get debug logs on which properties are retrieved from AWS
+logging.level.org.springframework.cloud.aws=debug
