--- a/client-app/src/main/resources/bootstrap.properties
+++ b/client-app/src/main/resources/bootstrap.properties
@@ -1,5 +1,10 @@
 spring.application.name=springConfigServerClientApp
 spring.profiles.active=dev
+
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.username=user
 spring.cloud.config.password=Passw0rd
+
+aws.paramstore.prefix=/config
+aws.paramstore.defaultContext=application
+aws.paramstore.profileSeparator=_
