--- a/client-app/pom.xml
+++ b/client-app/pom.xml
@@ -19,6 +19,16 @@
       <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
 
+    <!-- AWS starters -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-aws</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-aws-parameter-store-config</artifactId>
+    </dependency>
+
     <!-- Misc -->
     <dependency>
       <groupId>org.projectlombok</groupId>
