--- a/client-app/src/main/resources/bootstrap.properties
+++ b/client-app/src/main/resources/bootstrap.properties
@@ -4,6 +4,7 @@ spring.profiles.active=dev
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.username=user
 spring.cloud.config.password=Passw0rd
+spring.cloud.config.label=master
 
 aws.paramstore.prefix=/config
 aws.paramstore.defaultContext=application
