implement bootstrap configuration instead of the AWS one, so that we don't have useless calls to AWS Parameter Store

--- a/client-app/src/main/resources/bootstrap.properties
+++ b/client-app/src/main/resources/bootstrap.properties
@@ -9,3 +9,5 @@ spring.cloud.config.label=master
 aws.paramstore.prefix=/config
 aws.paramstore.defaultContext=application
 aws.paramstore.profileSeparator=_
+# disable AWS Param Store auto configuration to create our own ordered property source locator
+aws.paramstore.enabled=false
