move AWS ParamStore bootstrap configuration to the spring boot starter module

--- a/client-app/pom.xml
+++ b/client-app/pom.xml
@@ -14,19 +14,15 @@
   <description>client app</description>
 
   <dependencies>
+
+    <dependency>
+      <groupId>pro.filaretov.spring.config</groupId>
+      <artifactId>aws-property-source-spring-boot-starter</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>
-
-    <!-- AWS starters -->
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-aws</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-aws-parameter-store-config</artifactId>
     </dependency>
 
     <!-- Misc -->
@@ -43,5 +39,22 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+            </exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
