--- a/client-app/src/main/resources/bootstrap.properties
+++ b/client-app/src/main/resources/bootstrap.properties
@@ -6,6 +6,8 @@ spring.cloud.config.username=user
 spring.cloud.config.password=Passw0rd
 spring.cloud.config.label=master
 
+# Have to specify AWS ParamStore properties in the client app, as they are not picked up
+# if specified in aws-property-source-spring-boot-starter
 aws.paramstore.prefix=/config
 aws.paramstore.defaultContext=application
 aws.paramstore.profileSeparator=_
