--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
   </properties>
 
   <modules>
+    <module>aws-property-source-spring-boot-starter</module>
     <module>config-server</module>
     <module>client-app</module>
   </modules>
@@ -37,24 +38,13 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+      <dependency>
+        <groupId>pro.filaretov.spring.config</groupId>
+        <artifactId>aws-property-source-spring-boot-starter</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-            </exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
