use labels to filter AWS Parameter Store params

--- a/aws-property-source-spring-boot-starter/pom.xml
+++ b/aws-property-source-spring-boot-starter/pom.xml
@@ -19,6 +19,13 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-aws-parameter-store-config</artifactId>
     </dependency>
+
+    <!-- Misc -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
