--- a/client-app/src/main/resources/bootstrap.properties
+++ b/client-app/src/main/resources/bootstrap.properties
@@ -13,3 +13,6 @@ aws.paramstore.defaultContext=application
 aws.paramstore.profileSeparator=_
 # disable AWS Param Store auto configuration to create our own ordered property source locator
 aws.paramstore.enabled=false
+
+# Retrieve parameters with a Label specified
+my.aws.paramstore.label=v1
