poc for labels with non-default AWS region

--- a/client-app/src/main/resources/bootstrap.properties
+++ b/client-app/src/main/resources/bootstrap.properties
@@ -1,18 +1,18 @@
-spring.application.name=springConfigServerClientApp
-spring.profiles.active=dev
+spring.application.name=springClientApp
+#spring.profiles.active=dev
 
-spring.cloud.config.uri=http://localhost:8888
-spring.cloud.config.username=user
-spring.cloud.config.password=Passw0rd
-spring.cloud.config.label=master
+#spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.username=user
+#spring.cloud.config.password=Passw0rd
+#spring.cloud.config.label=master
 
 # Have to specify AWS ParamStore properties in the client app, as they are not picked up
 # if specified in aws-property-source-spring-boot-starter
-aws.paramstore.prefix=/config
+aws.paramstore.prefix=/poc01
 aws.paramstore.defaultContext=application
 aws.paramstore.profileSeparator=_
 # disable AWS Param Store auto configuration to create our own ordered property source locator
 aws.paramstore.enabled=false
 
 # Retrieve parameters with a Label specified
-my.aws.paramstore.label=v1
+my.aws.paramstore.label=v0.0.1
